--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<h1>Dinner planner Today</h1>
 		<div id="exampleView">
 			<div>
-				Number of guests: <span id="numberOfGuests"></span>
+				Number of guests: <span id="numberOfGuests">Här ska det stå</span>
 			</div>
 			<div>
           <button id="minusGuest" class="btn"><span class="glyphicon glyphicon-minus"></span></button>
