Added files via upload

--- a/dinnerplanner-html-master/IndexFilen.html
+++ b/dinnerplanner-html-master/IndexFilen.html
@@ -105,8 +105,8 @@
 								<button class="colorButt" id="search">search</button>
 							</div>
 							
-							<button class="menuButt" id="getMain">Main</button>
 							<button class="menuButt" id="getStarter">Starter</button>
+							<button class="menuButt" id="getMain">Main</button>
 							<button class="menuButt" id="getDessert">Dessert</button>
 						</div>
 						<div class= "bottom">
@@ -303,11 +303,11 @@
 	<script src="js/view/exampleView5.js"></script>
 	<script src="js/view/exampleView6.js"></script> 
 
-	<script src="js/view/exampleViewController.js"></script>
+	<!--<script src="js/view/exampleViewController.js"></script>-->
 	<script src="js/view/exampleView1Controller.js"></script>
 	<script src="js/view/exampleView2Controller.js"></script>
 	<script src="js/view/exampleView3Controller.js"></script>
 	<script src="js/view/exampleView5Controller.js"></script>
-	<script src="js/view/exampleView6Controller.js"></script>
+	<!--<script src="js/view/exampleView6Controller.js"></script>-->
 	</body>
 </html>
